Nangband ChangeLog
==================

2002-19-31
----------
- Made the object recall code usable; there's still a little more to do
  on it. (takkaria)
- Added the view_player_colour option from Zangband CVS; this changes the 
  colour of your '@' depending on how much HP you have left. (takkaria)

2002-03-30
----------
- Added SAT_HUNGER as an activation (grahame).
- Added tins of caviar as a new deep food source (grahame).
- Added the rope belt 'Aaragorn' as an artifact (grahame).
- Fixed a bug which broke ELEMENTAL activation (grahame)

2002-03-22
----------
- Improved the layout of the birthscreen. Implemented the first
  (excessive) use of 'Window Popups'.

2002-03-21
----------
- Replaced the mage, rogue, and ranger spell-lists with the spell-list from
  Greg Wooledge's GWAngband. This gives magic-users a much broader range of
  attack-spells to choose from including chaos, nether, sound, shards, and
  gravity effects.  Other big changes are the removal of the 'Globe of 
  Invulnerability' and the addition of 'Rune of Protection'. The new
  spellbooks are more "themed" with 9 books specialized on 'detection',
  'teleportation', 'protection', ... plus a beginner book containing a mix
  of spells similar to the good old "Magic for Beginners".  The depths where
  the spellbooks are common and the prices for spellbooks were changed
  accordingly.
- ***** WARNING *****: All spells known by magic-users are discarded when
  importing an old savefile, so that the player can choose freely from the
  new spell-list.  Don't forget to relearn your spells before trying to
  use them. Macros/keymaps with old spells probably won't work anymore -
  change them if necessary.
- Standing on a glyph no longer protects the player from melee attacks.
- Increased the range of infravision granted by potions of infravision to
  +5.

2002-03-20
----------
- The RISC OS port is now completely broken. The lua scripts take a part
  in this. I'm trying to fix it.

2002-03-16
----------