@@ -2554,7 +2554,7 @@
 #define OPT_disturb_minor			24
 /* xxx OPT_disturb_other */
 /* xxx OPT_alert_hitpoint */
-#define OPT_alert_failure			27
+/* xxx OPT_alert_failure */
 #define OPT_verify_destroy			28
 #define OPT_verify_special			29
 #define OPT_allow_quantity			30
@@ -2673,7 +2673,7 @@
 #define disturb_minor			op_ptr->opt[OPT_disturb_minor]
 /* xxx disturb_other */
 /* xxx */
-#define alert_failure			op_ptr->opt[OPT_alert_failure]
+/* alert_failure */
 #define verify_destroy			op_ptr->opt[OPT_verify_destroy]
 #define verify_special			op_ptr->opt[OPT_verify_special]
 #define allow_quantity			op_ptr->opt[OPT_allow_quantity]
